[package]
name = "welcome-msg"
version = "0.2.0"
edition = "2024"
authors = ["TeenCoder159"]
license = "MIT"
description = "A simple program that prints a welcome message on the terminal."
repository = "https://github.com/TeenCoder159/welcome-msg"
readme = "README.md"
keywords = ["welcome", "message", "terminal", "figlet"]
categories = ["command-line-utilities"]

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
termsize = "0.1.9"
